--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Sistema de cadastro de Jogos</h1>
-    <script> src="app.js"</script>
+    <script src="app.js"></script>
     
 </body>
 </html>
